# rustphone

./: .env  .gitattributes  Cargo.toml  build.sh  cargo.sh  run.sh
projects/client/: Cargo.toml
projects/client/assets/: box.bsp  box.lit  qbj3_chaosed0.bsp  qbj3_chaosed0.lit
projects/client/assets/shaders/: cutout.fs  default.fs  default.vs  frag.glsl  mesh.fs  mesh.vs  skybox.fs  skybox.vs  vert.glsl
projects/client/assets/skybox/: mak_cloudysky5_bk.tga  mak_cloudysky5_dn.tga  mak_cloudysky5_ft.tga  mak_cloudysky5_lf.tga  mak_cloudysky5_rt.tga  mak_cloudysky5_up.tga
projects/client/src/: .Transport.rs.swp  Transport.rs  bsp.rs  bsp_entity.rs  bsp_lit.rs  bsp_query.rs  bsp_render.rs  lit.rs  main.rs  palette.rs  player.rs  transport.rs
projects/server/: Cargo.toml
projects/server/src/: conn_handler.rs  err.rs  main.rs  transport.rs
projects/shared/: Cargo.toml
projects/shared/src/: .Message.rs.swp  Message.rs  bsp.rs  lib.rs  message.rs
