[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
game-networking-sockets = "0.1.2"
gl_loader = "0.1.2"
glow = "0.16.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git", rev = "c574449", features = ["SUPPORT_FILEFORMAT_TGA"] }
shared = { version = "0.1.0", path = "../shared" }
strum = "0.27.2"
strum_macros = "0.27.2"
texture_packer = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
