[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
game-networking-sockets = { git = "https://github.com/hussein-aitlahcen/gns-rs.git", rev = "c6bd44b" }
gl_loader = "0.1.2"
glow = "0.16.0"
itertools = "0.14.0"
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git", rev = "c574449", features = ["SUPPORT_FILEFORMAT_TGA"] }
shared = { version = "0.1.0", path = "../shared" }
texture_packer = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
